--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -12,6 +12,8 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
       SHA1: "bananas"
     steps:
+      - name: 'not working'
+        run: echo touchy3
       - uses: actions/checkout@v2
       - name: Check changed files
         id: diff
@@ -21,12 +23,14 @@ jobs:
             # Pull Request
             git fetch origin $GITHUB_BASE_REF --depth=1
             export DIFF=$( git diff --name-only origin/$GITHUB_BASE_REF $GITHUB_SHA )
+            export DIFF1=$( git diff --name-state origin/$GITHUB_BASE_REF $GITHUB_SHA )
             echo "Diff between origin/$GITHUB_BASE_REF and $GITHUB_SHA"
             echo "::set-output name=diff::$( echo "$DIFF" | sed ':a;N;$!ba;s/\n/%0A/g' )"
           else
             # Push
             git fetch origin ${{ github.event.before }} --depth=1
             export DIFF=$( git diff --name-only ${{ github.event.before }} $GITHUB_SHA )
+            export DIFF1=$( git diff --name-state ${{ github.event.before }} $GITHUB_SHA )
             echo "Diff between ${{ github.event.before }} and $GITHUB_SHA"
             echo "::set-output name=diff::${{ github.event.before }}"
           fi
@@ -36,39 +40,36 @@ jobs:
           echo "$DIFF"
           # Escape newlines (replace \n with %0A)
           echo "::set-output name=diff::$( echo "$DIFF" | sed ':a;N;$!ba;s/\n/%0A/g' )"
+          echo "::set-output name=diff1::$( echo "$DIFF1" | sed ':a;N;$!ba;s/\n/%0A/g' )"
           
       - name: Set matrix for build
         id: set-matrix
         run: |
           # See https://stackoverflow.com/a/62953566/11948346
           DIFF="${{ steps.diff.outputs.diff }}"
+          DIFF1="${{ steps.diff.outputs.diff1 }}"
           JSON="{\"include\":["
 
-          # Loop by lines
-          while read path; do
-            # Set $directory to substring before /
-            directory="$( echo $path | cut -d'/' -f1 -s )"
+          # Convert to arrays
+          array=($DIFF)
+          array1=($DIFF1)
 
-            if [ -z "$directory" ]; then
-              continue # Exclude root directory
-            elif [ "$directory" == docs ]; then
-              continue # Exclude docs directory
-            elif [ "$path" == *.rst ]; then
-              continue # Exclude *.rst files
-            fi
-
-            # Set $os. "ubuntu-latest" by default. if directory starts with windows, then "windows-latest"
-            os="ubuntu-latest"
-            if [ "$directory" == windows* ]; then
-              os="windows-latest"
-            fi
-
-            # Add build to the matrix only if it is not already included
-            JSONline="{\"directory\": \"$directory\", \"os\": \"$os\"},"
-            if [[ "$JSON" != *"$JSONline"* ]]; then
-              JSON="$JSON$JSONline"
-            fi
-          done <<< "$DIFF"
+          for i in $(seq 1 $((${#array[@]})))
+          do
+            if [ "${array1[$((($i-1)*2))]}" == "D" ]; then
+                    JSONline="${array[$(($i-1))]}"
+                    final=${JSONline//\// }
+                    finalarray=($final)
+                    if [ "${finalarray[-1]}" == 'terragrunt.hcl' ] && [ ${#finalarray[@]} -gt 1 ]; then
+                            
+                            unset finalarray[-1]
+                            path=$(echo ${finalarray[@]} | sed -r 's/ +/\//g')
+                            if [[ "$JSON" != *$path* ]]; then
+                                JSON="$JSON,{\"path\":$path/},"
+                            fi
+                    fi
+            fi  
+          done
 
           # Remove last "," and add closing brackets
           if [[ $JSON == *, ]]; then
