--- a/.github/workflows/push-check.yaml
+++ b/.github/workflows/push-check.yaml
@@ -10,6 +10,7 @@ jobs:
 
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
+      matrix2: ${{ steps.set-matrix.outputs.matrix2 }}
       BASE_SHA: ${{ steps.diff.outputs.sha }}
     steps:
       - name: 'not working'
@@ -51,7 +52,7 @@ jobs:
           DIFF="${{ steps.diff.outputs.diff }}"
           DIFF1="${{ steps.diff.outputs.diff1 }}"
           JSON="{\"include\":["
-
+          JSONCREATE="{\"include\":["
           # Convert to arrays
           array=($DIFF)
           array1=($DIFF1)
@@ -70,6 +71,18 @@ jobs:
                                 JSON="$JSON,{\"path\":$path/},"
                             fi
                     fi
+            else
+              JSONline="${array[$(($i-1))]}"
+                    final=${JSONline//\// }
+                    finalarray=($final)
+                    if [ "${finalarray[-1]}" == 'terragrunt.hcl' ] && [ ${#finalarray[@]} -gt 1 ]; then
+                            
+                            unset finalarray[-1]
+                            path=$(echo ${finalarray[@]} | sed -r 's/ +/\//g')
+                            if [[ "$JSONCREATE" != *$path* ]]; then
+                                JSONCREATE="$JSONCREATE,{\"path\":$path/},"
+                            fi
+                    fi
             fi  
           done
 
@@ -78,16 +91,23 @@ jobs:
             JSON="${JSON%?}"
           fi
           JSON="$JSON]}"
-          echo $JSON
+
+          # Remove last "," and add closing brackets Plan-Only
+          if [[ $JSONCREATE == *, ]]; then
+            JSONCREATE="${JSONCREATE%?}"
+          fi
+          JSONCREATE="$JSONCREATE]}"
+          
 
           # Set output
           echo "::set-output name=matrix::$( echo "$JSON" )"
+          echo "::set-output name=matrix2::$( echo "$JSONCREATE" )"
 
   plan:
     name: All the resource plannings
     needs: generate-matrix
     strategy:
-      matrix: ${{fromJson(needs.generate-matrix.outputs.matrix)}}
+      matrix: ${{fromJson(needs.generate-matrix.outputs.matrix2)}}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -107,7 +127,7 @@ jobs:
         
       - name: Run TerraGrunt
         run: |
-          echo terragrunt plan --working-diectory ${{ matrix.path }}
+          echo terragrunt plan --working-directory ${{ matrix.path }}
           
   destroy:
     name: All the destroy plannings
@@ -134,7 +154,7 @@ jobs:
 
       - name: Run TerraGrunt
         run: |
-          echo terragrunt plan -destroy --working-diectory ${{ matrix.path }}
+          echo terragrunt plan -destroy --working-directory ${{ matrix.path }}
 
       
           
