--- a/actions/pre-commitv2/Dockerfile
+++ b/actions/pre-commitv2/Dockerfile
@@ -176,4 +176,6 @@ ENV PRE_COMMIT_COLOR=${PRE_COMMIT_COLOR:-always}
 ENV INFRACOST_API_KEY=${INFRACOST_API_KEY:-}
 ENV INFRACOST_SKIP_UPDATE_CHECK=${INFRACOST_SKIP_UPDATE_CHECK:-false}
 
+COPY ["src", "/src/"]
+RUN ["chmod", "+x", "/src/main.sh"]
 ENTRYPOINT ["/src/main.sh"]
