--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,9 +18,9 @@ repos:
   rev: v1.64.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
   hooks:
     - id: terraform_fmt
-    - id: terraform_docs
-    - id: terrascan
-    - id: terraform_tflint
-    - id: terraform_tfsec
-    - id: checkov
+  #  - id: terraform_docs
+  #  - id: terrascan
+  #  - id: terraform_tflint
+  #  - id: terraform_tfsec
+  #  - id: checkov
 
