--- a/actions/pre-commit/action.yml
+++ b/actions/pre-commit/action.yml
@@ -9,6 +9,13 @@ inputs:
     description: 'Is is a push of a pull.'
     required: false
     default: 'false'
+  repo:
+    description: 'The github repo to push to'
+    default: 'GithubActionsModules'
+  commit:
+    description: 'Should the action commit change on the gh-pages branch'
+    default: 'somecommit'
+
 
 
 outputs:
