--- a/.github/actions/pre-commit/action.yml
+++ b/.github/actions/pre-commit/action.yml
@@ -9,12 +9,9 @@ inputs:
     description: 'Is is a push of a pull.'
     required: false
     default: 'false'
-  repo:
-    description: 'The github repo to push to'
-    default: 'GithubActionsModules'
   commit:
     description: 'Should the action commit change on the gh-pages branch'
-    default: 'somecommit'
+    default: 'Updating README.md Files.'
 
 
 
